// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Levels component should render component with 1 level 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2rem;
}

@media (max-width: 1200px) {
  .emotion-0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 40rem;
}

@media (max-width: 1200px) {
  .emotion-1 {
    max-width: unset;
  }
}

.emotion-2 {
  margin-bottom: 1rem;
}

.emotion-3 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-3:last-child {
  border-bottom: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-7 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-9 {
  width: 100%;
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="ms-MessageBar ms-MessageBar-multiline root-109"
            >
              <div
                class="ms-MessageBar-content content-110"
              >
                <div
                  aria-hidden="true"
                  class="ms-MessageBar-icon iconContainer-111"
                >
                  <i
                    aria-hidden="true"
                    class="icon-121"
                    data-icon-name="Info"
                  >
                    
                  </i>
                </div>
                <div
                  aria-live="polite"
                  class="ms-MessageBar-text text-113"
                  id="MessageBar0"
                  role="status"
                >
                  <span
                    class="ms-MessageBar-innerText innerText-114"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-7"
                  >
                    facility.name
                  </div>
                  <span
                    class="emotion-8"
                  >
                    <div
                      class="ms-TooltipHost root-122"
                      role="none"
                    >
                      <i
                        aria-label="Tooltip"
                        class="root-123"
                        data-icon-name="Info"
                        role="img"
                      >
                        
                      </i>
                      <div
                        hidden=""
                        id="tooltip1"
                        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                      >
                        facility.name.tooltip
                      </div>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="ms-TextField emotion-9 root-125"
              >
                <div
                  class="ms-TextField-wrapper"
                >
                  <div
                    class="ms-TextField-fieldGroup fieldGroup-126"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="facility.name"
                      class="ms-TextField-field field-127"
                      id="TextField2"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            {"level":{"filename":"kitchen.dwg","levelName":"Kitchen","ordinal":15}}
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2rem;
}

@media (max-width: 1200px) {
  .emotion-0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 40rem;
}

@media (max-width: 1200px) {
  .emotion-1 {
    max-width: unset;
  }
}

.emotion-2 {
  margin-bottom: 1rem;
}

.emotion-3 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-3:last-child {
  border-bottom: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-7 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-9 {
  width: 100%;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="ms-MessageBar ms-MessageBar-multiline root-109"
          >
            <div
              class="ms-MessageBar-content content-110"
            >
              <div
                aria-hidden="true"
                class="ms-MessageBar-icon iconContainer-111"
              >
                <i
                  aria-hidden="true"
                  class="icon-121"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                class="ms-MessageBar-text text-113"
                id="MessageBar0"
                role="status"
              >
                <span
                  class="ms-MessageBar-innerText innerText-114"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  facility.name
                </div>
                <span
                  class="emotion-8"
                >
                  <div
                    class="ms-TooltipHost root-122"
                    role="none"
                  >
                    <i
                      aria-label="Tooltip"
                      class="root-123"
                      data-icon-name="Info"
                      role="img"
                    >
                      
                    </i>
                    <div
                      hidden=""
                      id="tooltip1"
                      style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                    >
                      facility.name.tooltip
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="ms-TextField emotion-9 root-125"
            >
              <div
                class="ms-TextField-wrapper"
              >
                <div
                  class="ms-TextField-fieldGroup fieldGroup-126"
                >
                  <input
                    aria-invalid="false"
                    aria-label="facility.name"
                    class="ms-TextField-field field-127"
                    id="TextField2"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          {"level":{"filename":"kitchen.dwg","levelName":"Kitchen","ordinal":15}}
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Levels component should render component with 2 levels 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2rem;
}

@media (max-width: 1200px) {
  .emotion-0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 40rem;
}

@media (max-width: 1200px) {
  .emotion-1 {
    max-width: unset;
  }
}

.emotion-2 {
  margin-bottom: 1rem;
}

.emotion-3 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-3:last-child {
  border-bottom: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-7 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-9 {
  width: 100%;
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="ms-MessageBar ms-MessageBar-multiline root-109"
            >
              <div
                class="ms-MessageBar-content content-110"
              >
                <div
                  aria-hidden="true"
                  class="ms-MessageBar-icon iconContainer-111"
                >
                  <i
                    aria-hidden="true"
                    class="icon-121"
                    data-icon-name="Info"
                  >
                    
                  </i>
                </div>
                <div
                  aria-live="polite"
                  class="ms-MessageBar-text text-113"
                  id="MessageBar7"
                  role="status"
                >
                  <span
                    class="ms-MessageBar-innerText innerText-114"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-7"
                  >
                    facility.name
                  </div>
                  <span
                    class="emotion-8"
                  >
                    <div
                      class="ms-TooltipHost root-122"
                      role="none"
                    >
                      <i
                        aria-label="Tooltip"
                        class="root-123"
                        data-icon-name="Info"
                        role="img"
                      >
                        
                      </i>
                      <div
                        hidden=""
                        id="tooltip8"
                        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                      >
                        facility.name.tooltip
                      </div>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="ms-TextField emotion-9 root-125"
              >
                <div
                  class="ms-TextField-wrapper"
                >
                  <div
                    class="ms-TextField-fieldGroup fieldGroup-126"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="facility.name"
                      class="ms-TextField-field field-127"
                      id="TextField9"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            {"level":{"filename":"kitchen.dwg","levelName":"Kitchen","ordinal":15}}
          </div>
          <div>
            {"level":{"filename":"ground.dwg","levelName":"Ground","ordinal":0}}
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2rem;
}

@media (max-width: 1200px) {
  .emotion-0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 40rem;
}

@media (max-width: 1200px) {
  .emotion-1 {
    max-width: unset;
  }
}

.emotion-2 {
  margin-bottom: 1rem;
}

.emotion-3 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-3:last-child {
  border-bottom: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-7 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-9 {
  width: 100%;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="ms-MessageBar ms-MessageBar-multiline root-109"
          >
            <div
              class="ms-MessageBar-content content-110"
            >
              <div
                aria-hidden="true"
                class="ms-MessageBar-icon iconContainer-111"
              >
                <i
                  aria-hidden="true"
                  class="icon-121"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                class="ms-MessageBar-text text-113"
                id="MessageBar7"
                role="status"
              >
                <span
                  class="ms-MessageBar-innerText innerText-114"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  facility.name
                </div>
                <span
                  class="emotion-8"
                >
                  <div
                    class="ms-TooltipHost root-122"
                    role="none"
                  >
                    <i
                      aria-label="Tooltip"
                      class="root-123"
                      data-icon-name="Info"
                      role="img"
                    >
                      
                    </i>
                    <div
                      hidden=""
                      id="tooltip8"
                      style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                    >
                      facility.name.tooltip
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="ms-TextField emotion-9 root-125"
            >
              <div
                class="ms-TextField-wrapper"
              >
                <div
                  class="ms-TextField-fieldGroup fieldGroup-126"
                >
                  <input
                    aria-invalid="false"
                    aria-label="facility.name"
                    class="ms-TextField-field field-127"
                    id="TextField9"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          {"level":{"filename":"kitchen.dwg","levelName":"Kitchen","ordinal":15}}
        </div>
        <div>
          {"level":{"filename":"ground.dwg","levelName":"Ground","ordinal":0}}
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Levels component should render component with 3 levels 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2rem;
}

@media (max-width: 1200px) {
  .emotion-0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 40rem;
}

@media (max-width: 1200px) {
  .emotion-1 {
    max-width: unset;
  }
}

.emotion-2 {
  margin-bottom: 1rem;
}

.emotion-3 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-3:last-child {
  border-bottom: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-7 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-9 {
  width: 100%;
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="ms-MessageBar ms-MessageBar-multiline root-109"
            >
              <div
                class="ms-MessageBar-content content-110"
              >
                <div
                  aria-hidden="true"
                  class="ms-MessageBar-icon iconContainer-111"
                >
                  <i
                    aria-hidden="true"
                    class="icon-121"
                    data-icon-name="Info"
                  >
                    
                  </i>
                </div>
                <div
                  aria-live="polite"
                  class="ms-MessageBar-text text-113"
                  id="MessageBar14"
                  role="status"
                >
                  <span
                    class="ms-MessageBar-innerText innerText-114"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-7"
                  >
                    facility.name
                  </div>
                  <span
                    class="emotion-8"
                  >
                    <div
                      class="ms-TooltipHost root-122"
                      role="none"
                    >
                      <i
                        aria-label="Tooltip"
                        class="root-123"
                        data-icon-name="Info"
                        role="img"
                      >
                        
                      </i>
                      <div
                        hidden=""
                        id="tooltip15"
                        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                      >
                        facility.name.tooltip
                      </div>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="ms-TextField emotion-9 root-125"
              >
                <div
                  class="ms-TextField-wrapper"
                >
                  <div
                    class="ms-TextField-fieldGroup fieldGroup-126"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="facility.name"
                      class="ms-TextField-field field-127"
                      id="TextField16"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            {"level":{"filename":"kitchen.dwg","levelName":"Kitchen","ordinal":15}}
          </div>
          <div>
            {"level":{"filename":"ground.dwg","levelName":"Ground","ordinal":0}}
          </div>
          <div>
            {"level":{"filename":"basement.dwg","levelName":"Basement","ordinal":-1}}
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2rem;
}

@media (max-width: 1200px) {
  .emotion-0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 40rem;
}

@media (max-width: 1200px) {
  .emotion-1 {
    max-width: unset;
  }
}

.emotion-2 {
  margin-bottom: 1rem;
}

.emotion-3 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-3:last-child {
  border-bottom: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-7 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-9 {
  width: 100%;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="ms-MessageBar ms-MessageBar-multiline root-109"
          >
            <div
              class="ms-MessageBar-content content-110"
            >
              <div
                aria-hidden="true"
                class="ms-MessageBar-icon iconContainer-111"
              >
                <i
                  aria-hidden="true"
                  class="icon-121"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                class="ms-MessageBar-text text-113"
                id="MessageBar14"
                role="status"
              >
                <span
                  class="ms-MessageBar-innerText innerText-114"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  facility.name
                </div>
                <span
                  class="emotion-8"
                >
                  <div
                    class="ms-TooltipHost root-122"
                    role="none"
                  >
                    <i
                      aria-label="Tooltip"
                      class="root-123"
                      data-icon-name="Info"
                      role="img"
                    >
                      
                    </i>
                    <div
                      hidden=""
                      id="tooltip15"
                      style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                    >
                      facility.name.tooltip
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="ms-TextField emotion-9 root-125"
            >
              <div
                class="ms-TextField-wrapper"
              >
                <div
                  class="ms-TextField-fieldGroup fieldGroup-126"
                >
                  <input
                    aria-invalid="false"
                    aria-label="facility.name"
                    class="ms-TextField-field field-127"
                    id="TextField16"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          {"level":{"filename":"kitchen.dwg","levelName":"Kitchen","ordinal":15}}
        </div>
        <div>
          {"level":{"filename":"ground.dwg","levelName":"Ground","ordinal":0}}
        </div>
        <div>
          {"level":{"filename":"basement.dwg","levelName":"Basement","ordinal":-1}}
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Levels component should render component with 4 levels 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2rem;
}

@media (max-width: 1200px) {
  .emotion-0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 40rem;
}

@media (max-width: 1200px) {
  .emotion-1 {
    max-width: unset;
  }
}

.emotion-2 {
  margin-bottom: 1rem;
}

.emotion-3 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-3:last-child {
  border-bottom: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-7 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-9 {
  width: 100%;
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="ms-MessageBar ms-MessageBar-multiline root-109"
            >
              <div
                class="ms-MessageBar-content content-110"
              >
                <div
                  aria-hidden="true"
                  class="ms-MessageBar-icon iconContainer-111"
                >
                  <i
                    aria-hidden="true"
                    class="icon-121"
                    data-icon-name="Info"
                  >
                    
                  </i>
                </div>
                <div
                  aria-live="polite"
                  class="ms-MessageBar-text text-113"
                  id="MessageBar21"
                  role="status"
                >
                  <span
                    class="ms-MessageBar-innerText innerText-114"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-7"
                  >
                    facility.name
                  </div>
                  <span
                    class="emotion-8"
                  >
                    <div
                      class="ms-TooltipHost root-122"
                      role="none"
                    >
                      <i
                        aria-label="Tooltip"
                        class="root-123"
                        data-icon-name="Info"
                        role="img"
                      >
                        
                      </i>
                      <div
                        hidden=""
                        id="tooltip22"
                        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                      >
                        facility.name.tooltip
                      </div>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="ms-TextField emotion-9 root-125"
              >
                <div
                  class="ms-TextField-wrapper"
                >
                  <div
                    class="ms-TextField-fieldGroup fieldGroup-126"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="facility.name"
                      class="ms-TextField-field field-127"
                      id="TextField23"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            {"level":{"filename":"kitchen.dwg","levelName":"Kitchen","ordinal":15}}
          </div>
          <div>
            {"level":{"filename":"ground.dwg","levelName":"Ground","ordinal":0}}
          </div>
          <div>
            {"level":{"filename":"basement.dwg","levelName":"Basement","ordinal":-1}}
          </div>
          <div>
            {"level":{"filename":"level_2.dwg","levelName":"Level 2","ordinal":21}}
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2rem;
}

@media (max-width: 1200px) {
  .emotion-0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 40rem;
}

@media (max-width: 1200px) {
  .emotion-1 {
    max-width: unset;
  }
}

.emotion-2 {
  margin-bottom: 1rem;
}

.emotion-3 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-3:last-child {
  border-bottom: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-5 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-7 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-9 {
  width: 100%;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="ms-MessageBar ms-MessageBar-multiline root-109"
          >
            <div
              class="ms-MessageBar-content content-110"
            >
              <div
                aria-hidden="true"
                class="ms-MessageBar-icon iconContainer-111"
              >
                <i
                  aria-hidden="true"
                  class="icon-121"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                class="ms-MessageBar-text text-113"
                id="MessageBar21"
                role="status"
              >
                <span
                  class="ms-MessageBar-innerText innerText-114"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  facility.name
                </div>
                <span
                  class="emotion-8"
                >
                  <div
                    class="ms-TooltipHost root-122"
                    role="none"
                  >
                    <i
                      aria-label="Tooltip"
                      class="root-123"
                      data-icon-name="Info"
                      role="img"
                    >
                      
                    </i>
                    <div
                      hidden=""
                      id="tooltip22"
                      style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                    >
                      facility.name.tooltip
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="ms-TextField emotion-9 root-125"
            >
              <div
                class="ms-TextField-wrapper"
              >
                <div
                  class="ms-TextField-fieldGroup fieldGroup-126"
                >
                  <input
                    aria-invalid="false"
                    aria-label="facility.name"
                    class="ms-TextField-field field-127"
                    id="TextField23"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div>
          {"level":{"filename":"kitchen.dwg","levelName":"Kitchen","ordinal":15}}
        </div>
        <div>
          {"level":{"filename":"ground.dwg","levelName":"Ground","ordinal":0}}
        </div>
        <div>
          {"level":{"filename":"basement.dwg","levelName":"Basement","ordinal":-1}}
        </div>
        <div>
          {"level":{"filename":"level_2.dwg","levelName":"Level 2","ordinal":21}}
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
